feat: 🎸 Atualiza informações Certificados

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                             <div class="ano"><i class='bx bxs-calendar'></i>Outubro 2023 - Outubro 2024 </div>
                             <h3>Floripa Mais Tec - Futuro DEV</h3>
                             <p>Instituição: SENAI/SEBRAE/PMF/LAB365</a></p>
+                            <p><strong>Tipo:</strong> Curso Profissionalizante</p>
                             <p><strong>Duração:</strong> 1 Ano</p>
                             <p><strong>Tag:</strong> JavaScript, React, Node.js, Express, Axios, PostgreSQL, Sequelize, Migration, JWT, HTML5, CSS3, GitHub, GitFlow, Metodologias Ágeis, Docker, Virtualização, DevOps, Integração e Deploy</p>
 
@@ -243,6 +244,26 @@
                         </div>
                     </div>
                     
+                    <div class="certificado-content">
+                        <div class="content">
+                            <div class="ano"><i class='bx bxs-calendar'></i>Agosto 2024 - Novembro 2024 </div>
+                            <h3>Analista de Desenvolvimento Web - Fullstack</h3>
+                            <p>Instituição: SENAI/SC - LAB 365</a></p>
+                            <p><strong>Tipo:</strong> Certificado</p>
+                            <p><strong>Duração:</strong> 160 Horas</p>
+                            <p><strong>Tag:</strong> JavaScript, React, Node.js, Express, Axios, PostgreSQL, Sequelize, Migration, JWT, HTML5, CSS3, GitHub, GitFlow, Metodologias Ágeis, Docker, Virtualização, DevOps, Integração e Deploy</p>
+
+                            <details> <summary>Descrição sobre o treinamento</summary>
+                                <p>
+                                    160 Horas, 10+ Exercícios, 02 Mini-projetos, 01 Projeto Final Squad.
+                                </p>
+                                <small>A autenticidade do documento pode ser conferida no endereço:</small>
+                                <a href="https://ecommerce.sesisenai.org.br/documentos/validar/D40PIO2E6L" target="_blank">https://ecommerce.sesisenai.org.br/documentos/validar/D40PIO2E6L</a>
+                                
+                            </details>
+                        </div>
+                    </div>
+
                     <div class="certificado-content">
                         <div class="content">
                             <div class="ano"><i class='bx bxs-calendar'></i>Julho 2017 - Julho 2022 </div>
