feat: 🎸 Atualiza e adiciona certificações

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <p>Instituição: SENAI/SEBRAE/PMF/LAB365</a></p>
                             <p><strong>Tipo:</strong> Curso Profissionalizante</p>
                             <p><strong>Duração:</strong> 1 Ano</p>
-                            <p><strong>Tag:</strong> JavaScript, React, Node.js, Express, Axios, PostgreSQL, Sequelize, Migration, JWT, HTML5, CSS3, GitHub, GitFlow, Metodologias Ágeis, Docker, Virtualização, DevOps, Integração e Deploy</p>
+                            <p><strong>Tag:</strong> JavaScript, React, Node.js, Express, Axios, PostgreSQL, Sequelize, Migration, JWT, HTML5, CSS3, GitHub, GitFlow, Metodologias Ágeis, Trello, Docker, Virtualização, DevOps, Integração e Deploy</p>
 
                             <details> <summary>Descrição sobre o treinamento</summary>
                                 <p>
@@ -251,15 +251,51 @@
                             <p>Instituição: SENAI/SC - LAB 365</a></p>
                             <p><strong>Tipo:</strong> Certificado</p>
                             <p><strong>Duração:</strong> 160 Horas</p>
-                            <p><strong>Tag:</strong> JavaScript, React, Node.js, Express, Axios, PostgreSQL, Sequelize, Migration, JWT, HTML5, CSS3, GitHub, GitFlow, Metodologias Ágeis, Docker, Virtualização, DevOps, Integração e Deploy</p>
+                            <p><strong>Tag:</strong> JavaScript, React, Node.js, Express, Axios, PostgreSQL, Sequelize, Migration, JWT, HTML5, CSS3, GitHub, GitFlow, Metodologias Ágeis, Trello, Docker, Virtualização, DevOps, Integração e Deploy</p>
 
                             <details> <summary>Descrição sobre o treinamento</summary>
                                 <p>
                                     160 Horas, 10+ Exercícios, 02 Mini-projetos, 01 Projeto Final Squad.
                                 </p>
                                 <small>A autenticidade do documento pode ser conferida no endereço:</small>
-                                <a href="https://ecommerce.sesisenai.org.br/documentos/validar/D40PIO2E6L" target="_blank">https://ecommerce.sesisenai.org.br/documentos/validar/D40PIO2E6L</a>
-                                
+                                <a href="https://ecommerce.sesisenai.org.br/documentos/validar/D40PIO2E6L" target="_blank">https://ecommerce.sesisenai.org.br/documentos/validar/D40PIO2E6L</a>   
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="certificado-content">
+                        <div class="content">
+                            <div class="ano"><i class='bx bxs-calendar'></i>Maio 2024 - Setembro 2024 </div>
+                            <h3>Analista de Desenvolvimento Web - Back-end</h3>
+                            <p>Instituição: SENAI/SC - LAB 365</a></p>
+                            <p><strong>Tipo:</strong> Certificado</p>
+                            <p><strong>Duração:</strong> 220 Horas</p>
+                            <p><strong>Tag:</strong> JavaScript, Node.js, Express, PostgreSQL, JWT, Versionamento (Git, Git Flow, GitHub)</p>
+                            <details> <summary>Descrição sobre o treinamento</summary>
+                                <p>
+                                    220 Horas, 50+ Exercícios, 02 Mini-projetos, 01 Projeto Completo.
+                                </p>
+                                <small>A autenticidade do documento pode ser conferida no endereço:</small>
+                                <a href="https://ecommerce.sesisenai.org.br/documentos/validar/DXN3NFT21G" target="_blank">https://ecommerce.sesisenai.org.br/documentos/validar/DXN3NFT21G</a>    
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="certificado-content">
+                        <div class="content">
+                            <div class="ano"><i class='bx bxs-calendar'></i>Janeiro 2024 - Julho 2024 </div>
+                            <h3>Analista de Desenvolvimento Web - Front-end</h3>
+                            <p>Instituição: SENAI/SC - LAB 365</a></p>
+                            <p><strong>Tipo:</strong> Certificado</p>
+                            <p><strong>Duração:</strong> 220 Horas</p>
+                            <p><strong>Tag:</strong>React, JavaScript, HTML, JSX e CSS, Versionamento (Git, Git Flow, GitHub).</p>
+
+                            <details> <summary>Descrição sobre o treinamento</summary>
+                                <p>
+                                    220 Horas, 70+ Exercícios, 01 Mini-projetos, 01 Projeto completo.
+                                </p>
+                                <small>A autenticidade do documento pode ser conferida no endereço:</small>
+                                <a href="https://ecommerce.sesisenai.org.br/documentos/validar/DFNI8AEB9Z" target="_blank">https://ecommerce.sesisenai.org.br/documentos/validar/DFNI8AEB9Z</a>  
                             </details>
                         </div>
                     </div>
